Show tooltip of a button only when text is truncated.

Tooltip is not needed for the "sign in another user..." button because
it's same as the label itself. The default behavior of the label can add
tooltip with the label text only when the label is truncated.

Test: manual
Bug: 866439
Change-Id: I4dee9ea44b751d64f07b0458311a653bffb0a283
Reviewed-on: https://chromium-review.googlesource.com/1152644
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579343}
Former-commit-id: b28b0d99bbfa283b3b587f844b040b31db24d47c